fixed responsiveness on Mobile

--- a/src/index.css
+++ b/src/index.css
@@ -140,12 +140,20 @@ body {
         @apply relative min-h-dvh w-full overflow-hidden;
 
         #c-left-leaf {
-            @apply absolute left-0 md:bottom-0 md:top-auto -top-20 md:w-fit w-1/3;
+            @apply absolute left-0 bottom-0 top-auto  md:w-fit w-1/3;
         }
 
         #c-right-leaf {
-            @apply absolute right-0 md:bottom-0 md:top-auto -top-20 md:w-fit w-1/3;
+            @apply absolute right-[-15px] md:right-0 bottom-100 md:bottom-0 top-auto  md:w-fit w-1/3;
         }
+
+        /* #c-left-leaf {
+            @apply absolute left-0 bottom-0 top-auto   w-1/3;
+        }
+
+        #c-right-leaf {
+            @apply absolute right-[-15px] bottom-100 top-auto   w-1/3;
+        } */
 
         .list {
             @apply container mx-auto relative z-10 flex md:flex-row flex-col justify-between items-start gap-20 pt-40 2xl:px-0 px-5;
